==> china-djyos/djyos/bsp/cpudrv/imxrt/1050/src/eth/cpu_peri_eth.c <==
#include <stdio.h>
#include <stddef.h>
#include <stdint.h>
#include <string.h>
#include <sys/socket.h>
#include <cpu_peri.h>
#include "cpu_peri_int_line.h"
#include <board-config.h>
#include "fsl_clock.h"
#include "cpu_peri_eth.h"
#include "dbug.h"
#include "project_config.h"    //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_MAC    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_MAC_ADDR0             00//"网卡MAC地址0",
#define CFG_MAC_ADDR1             00//"网卡MAC地址1",
#define CFG_MAC_ADDR2             00//"网卡MAC地址2",
#define CFG_MAC_ADDR3             00//"网卡MAC地址3",
#define CFG_MAC_ADDR4             00//"网卡MAC地址4",
#define CFG_MAC_ADDR5             00//"网卡MAC地址5",
#define CFG_LOOP_CYCLE            1000//"读网卡loop时间",
#define CFG_IMX_PHY_SPEED          1//"配置phy速度",为1表示100M，为0表示10M
#define CFG_IMX_PHY_DUPLEX         1//"配置全/半双工模式",为1表示全双工，为0表示半双工
#define CFG_ETH_DEV_NAME          "ETH_DEV_IMXRT1052"//"网卡名称",注册网卡的设备名称
#define CN_DEVNAME_LEN 32
#define ETH_RING_NUM        (FSL_FEATURE_ENET_QUEUE)
#define CORE_CLK_FREQ       CLOCK_GetFreq(kCLOCK_AhbClk)
#define EthRxDescs      (8U)
#define EthTxDescs      (8U)
#define EthRxBufSize    ENET_FRAME_MAX_FRAMELEN
#define EthTxBufSize    ENET_FRAME_MAX_FRAMELEN

static void ETH_HardDrvInit(tagMacDriver *pDrive)
{
    // configure ethernet peripheral (GPIOs, clocks, MAC)
    ENET_Init(  pDrive->EthHandle->base,    \
                &pDrive->EthHandle->handle, \
                &pDrive->EthHandle->config, \
                pDrive->EthHandle->buffConfig,\
                pDrive->macaddr,            \
                CORE_CLK_FREQ);

    /* 初始化后默认使能接收，发送在发送函数中使能 */
    ENET_ActiveRead(pDrive->EthHandle->base);
}

 static struct NetPkg *__MacRcv(ptu32_t devhandle)
{
    struct NetPkg         *pkg = NULL;
    tagMacDriver      *pDrive;
    tagEthHandle *EthHandle;
    status_t status;
    enet_data_error_stats_t eErrStatic;
    u32  len=0;
    u8   *dst;

    pDrive = &gMacDriver;
    EthHandle = pDrive->EthHandle;
    // get received frame
    status = ENET_GetRxFrameSize(&EthHandle->handle, &len);
    //len = EthHandle->handle.rxBdCurrent[0]->length;
    if (status == kStatus_ENET_RxFrameError)
    //if(len==0)
    {
        /* Update the received buffer when error happened. */
        /* Get the error information of the received g_frame. */
        ENET_GetRxErrBeforeReadFrame(&EthHandle->handle, &eErrStatic);
        /* update the receive buffer. */
        ENET_ReadFrame(EthHandle->base, &EthHandle->handle, NULL, 0);
        return NULL;
    }

    if(len > 0)
    {
        pkg = PkgMalloc(len,CN_PKLGLST_END);
        if(NULL == pkg)
            pDrive->debuginfo.nopkgCnts++;
    }

    if(NULL != pkg)
    {
        dst = PkgGetCurrentBuffer(pkg);
//      dst = (u8 *)(pkg->buf +pkg->offset);
        status = ENET_ReadFrame(EthHandle->base, &EthHandle->handle, dst, len);
        PkgSetDataLen(pkg, len);
//      pkg->datalen = len;
    }

    return pkg;
}

static bool_t MacSnd(ptu32_t handle,struct NetPkg * pkg,u32 netdevtask)
{
    bool_t             result;
    tagMacDriver      *pDrive;
    tagEthHandle    *EthHandle;
    struct NetPkg         *tmppkg;
    u8                *dst,*src;
    u16                len=0;

    result = false;
    pDrive = &gMacDriver;
    EthHandle = pDrive->EthHandle;
    pDrive->debuginfo.sndTimes++;
    if((0 == handle)||(NULL == pkg))
        return result;

    if(Lock_MutexPend(pDrive->protect,CN_TIMEOUT_FOREVER))
    {
        if(EthHandle->handle.txBdCurrent[0]->control & \
                ENET_BUFFDESCRIPTOR_TX_READY_MASK)
        {
            pDrive->debuginfo.sndnobdCnt ++;
            goto NODESCERROR;
        }

        //copy datas to static frame buffer
        tmppkg = pkg;
        dst      = &gTxBuffer[0];
        len = PkgFrameDataCopy(tmppkg,dst);
//        do
//        {
//            src = (tmppkg->buf + tmppkg->offset);
//            memcpy(dst,src,PkgGetDataLen(tmppkg));
//            dst      += PkgGetDataLen(tmppkg);
//            len      += PkgGetDataLen(tmppkg);
////          memcpy(dst,src,tmppkg->datalen);
////          dst      += tmppkg->datalen;
////          len      += tmppkg->datalen;
//            if(PkgIsBufferEnd(tmppkg))
//            {
//                tmppkg = NULL;
//                break;
//            }
//            else
//            {
//                tmppkg = PkgGetNextUnit(tmppkg);
//            }
//      }while(NULL != tmppkg );

        if(len < EthTxBufSize)
        {
            if(ENET_SendFrame(EthHandle->base, &EthHandle->handle,\
                            &gTxBuffer[0], len)==kStatus_Success)
            {
                pDrive->debuginfo.sndOkTimes++;
                result = true;
            }
        }
        else
        {
            pDrive->debuginfo.sndPkgTooLongCnt++;
        }

NODESCERROR:
        Lock_MutexPost(pDrive->protect);
    }

    return result;
}

static bool_t MacCtrl(struct NetDev * devhandle,u8 cmd,ptu32_t para)
{
    bool_t result = false;
    tagMacDriver   *pDrive;
    pDrive = &gMacDriver;
    if((pDrive->devhandle == devhandle)&&\
        (Lock_MutexPend(pDrive->protect,CN_TIMEOUT_FOREVER)))
    {
        switch(cmd)
        {
            case EN_NETDEV_SETNOPKG:
                if(para)
                {
                    ETH_HardDrvInit(pDrive);
                    pDrive->debuginfo.rsttimes++;
                }
                result = true;
                break;
            case EN_NETDEV_SETBORAD:
                if(para)
                {
                    if((pDrive->EthHandle->config.macSpecialConfig & \
                            (~kENET_ControlRxBroadCastRejectEnable))!=0)
                    {
                        pDrive->EthHandle->config.macSpecialConfig &= \
                                                (~kENET_ControlRxBroadCastRejectEnable);
                        pDrive->EthHandle->base->RCR &= ~ENET_RCR_BC_REJ_MASK;
                    }
                    printk("mac broad enable\n\r");
                    pDrive->macstat.bfd = 0;
                }
                else
                {
                    pDrive->EthHandle->config.macSpecialConfig |= \
                                            kENET_ControlRxBroadCastRejectEnable;
                    pDrive->EthHandle->base->RCR |= ENET_RCR_BC_REJ_MASK;
                    printk("mac broad disable\n\r");
                    pDrive->macstat.bfd = 1;
                }
                result = true;
                break;
            case EN_NETDEV_SETPOINT:
                result = true;
                break;
            case EN_NETDEV_SETMULTI:
               result = true;
                break;
            case EN_NETDEV_SETRECV:
                if(para)
                {
                    pDrive->EthHandle->base->RDAR = ENET_RDAR_RDAR_MASK;
                }
                else
                {
                    pDrive->EthHandle->base->RDAR &= ~ENET_RDAR_RDAR_MASK;
                }
                result = true;
                break;
            case EN_NETDEV_SETSEND:
                if(para)
                {
                    ETH_HardDrvInit(pDrive);
                }
                else
                {
                    ENET_Deinit(pDrive->EthHandle->base);
                }
                break;
            case EN_NETDEV_SETMAC:
                memcpy(pDrive->macaddr,(u8 *)para, CN_MACADDR_LEN);
                ETH_HardDrvInit(pDrive);
                pDrive->debuginfo.rsttimes++;
                result = true;
                break;
            case EN_NETDEV_SETMULTIMAC:
                break;
            case EN_NETDEV_GTETMAC:
                if((u8 *)para != NULL)
                {
                    memcpy((u8 *)para,pDrive->macaddr, CN_MACADDR_LEN);
                    result = true;
                }
                break;
            case EN_NETDEV_RESET:
                if(para)
                {
                    ENET_Reset(pDrive->EthHandle->base);
                    ETH_HardDrvInit(pDrive);
                    pDrive->debuginfo.rsttimes++;
                    result = true;
                }
                break;
            default:
                result = false;
                break;
        }
        Lock_MutexPost(pDrive->protect);
    }

    return result;
}

static ptu32_t __MacRcvTask(void)
{
    struct NetPkg *pkg=NULL;
    struct NetDev *handle;
    u8        *rawbuf;
    u16        len;
    tagMacDriver      *pDrive;
    pDrive = &gMacDriver;

    DJY_GetEventPara(&handle,NULL);
    while(1)
    {
        Lock_SempPend(pDrive->rcvsync,pDrive->loopcycle);
        pDrive->debuginfo.rxTaskRun++;
        while(1)
        {
            if(Lock_MutexPend(pDrive->protect,CN_TIMEOUT_FOREVER))
            {
                pkg = __MacRcv(handle);
                Lock_MutexPost(pDrive->protect);
            }
            if(NULL != pkg)
            {
                //maybe we have another method like the hardware
                NetDev_FlowCtrl(handle,NetDev_FrameType(PkgGetCurrentBuffer(pkg),
                                                      PkgGetDataLen(pkg)));
                //you could alse use the soft method
                if(NULL != pDrive->fnrcvhook)
                {
                    rawbuf = PkgGetCurrentBuffer(pkg);
//                  rawbuf = pkg->buf + pkg->offset;
                    len = PkgGetDataLen(pkg);
                    pDrive->fnrcvhook(rawbuf,len);
                }
                else
                {
                    Link_NetDevPush(handle,pkg);
                }
                PkgTryFreePart(pkg);
                pDrive->debuginfo.rcvPkgTimes++;
            }
            else
            {
                  //here we still use the counter to do the time state check
                NetDev_FlowCtrl(handle,EN_NETDEV_FRAME_LAST);
                break;
            }
        }
    }
    return 0;
}

static bool_t __CreateRcvTask(struct NetDev * handle)
{
    bool_t result = false;
    u16 evttID;
    u16 eventID;

    evttID = DJY_EvttRegist(EN_CORRELATIVE, CN_PRIO_REAL, 0, 1,
        (ptu32_t (*)(void))__MacRcvTask,NULL, 0x800, "GMACRcvTask");
    if (evttID != CN_EVTT_ID_INVALID)
    {
        eventID=DJY_EventPop(evttID, NULL,  0,(ptu32_t)handle, 0, 0);
        if(eventID != CN_EVENT_ID_INVALID)
        {
            result = true;
        }
        else
        {
            DJY_EvttUnregist(evttID);
        }
    }
    return result;
}

 u32 ETH_IntHandler(ufast_t IntLine)
{
    tagMacDriver *pDrive;
    tagEthHandle *EthHandle;
    uint32_t mask = kENET_RxFrameInterrupt | kENET_RxBufferInterrupt;

    pDrive = &gMacDriver;
    EthHandle = pDrive->EthHandle;

    pDrive->debuginfo.Ints++;

     while (mask & EthHandle->base->EIR)
     {
         /* Clear the transmit interrupt event. */
         EthHandle->base->EIR = mask;
         Lock_SempPost(pDrive->rcvsync);
     }
    return 0;
}

bool_t ModuleInstall_ETH(const char *devname, u8 *macaddress,\
                         tagPhyMessage  *phy,
                          bool_t loop,u32 loopcycle,\
                          bool_t (*rcvHook)(u8 *buf, u16 len))
{
    tagMacDriver   *pDrive = &gMacDriver;
    struct NetDevPara   devpara;

    memset((void *)pDrive,0,sizeof(tagMacDriver));
    //copy the config para to the pDrive
    memcpy(pDrive->devname,devname,CN_DEVNAME_LEN-1);
    memcpy((void *)pDrive->macaddr,macaddress,CN_MACADDR_LEN);
    if(loop)
    {
        pDrive->loop = 1;
    }
    pDrive->loopcycle = loopcycle;
    pDrive->fnrcvhook = rcvHook;
    //set the work mode and speed
    pDrive->macstat.pm = 0;         //primmiscuous mode:= 1,no MAC addr filte
    pDrive->macstat.duplex = (phy->duplex==CPU_ETH_FULL_DUPLEX ? 1:0);    //duplex full
    pDrive->macstat.speed = (phy->speed==CPU_ETH_SPEED_100M ? 1:0);     //100 Mb
    pDrive->macstat.bfd = 0;       //broadcast frames disable
    pDrive->macstat.mii = 0;       //use RMII mode

    pDrive->EthHandle = &sEthHandle;
    pDrive->EthHandle->base = ENET;
    ENET_GetDefaultConfig(&pDrive->EthHandle->config);
    pDrive->EthHandle->config.miiSpeed = (phy->speed==CPU_ETH_SPEED_100M ?\
                                                kENET_MiiSpeed100M:kENET_MiiSpeed10M);;
    pDrive->EthHandle->config.miiDuplex = (phy->duplex==CPU_ETH_FULL_DUPLEX ? \
                                                kENET_MiiFullDuplex:kENET_MiiHalfDuplex);
    pDrive->EthHandle->config.miiMode = kENET_RmiiMode;
//  pDrive->EthHandle->config.intCoalesceCfg = &intcoalesce;
//  pDrive->EthHandle->config.intCoalesceCfg->rxCoalesceFrameCount[0] = 10;
    pDrive->EthHandle->config.interrupt = kENET_RxBufferInterrupt|kENET_RxFrameInterrupt;
    pDrive->EthHandle->config.txAccelerConfig = \
                            kENET_TxAccelIpCheckEnabled|kENET_TxAccelProtoCheckEnabled;
    pDrive->EthHandle->config.rxAccelerConfig = \
            kENET_RxAccelIpCheckEnabled|kENET_RxAccelProtoCheckEnabled;
//  pDrive->EthHandle->config.txFifoWatermark =32;
//  pDrive->EthHandle->config.rxFifoFullThreshold = 32;
    ETH_HardDrvInit(pDrive);
    //all the configuration has set in the pDrive now,we need some sys assistant
    //application some semphore and mutex
    pDrive->rcvsync = Lock_SempCreate(1,0,CN_BLOCK_FIFO,NULL);
    if(NULL == pDrive->rcvsync)
    {
        goto RCVSYNC_FAILED;
    }
    pDrive->protect = Lock_MutexCreate(NULL);
    if(NULL == pDrive->protect)
    {
        goto DEVPROTECT_FAILED;
    }

    //install the net device
    devpara.ifctrl = MacCtrl;
    devpara.ifsend = MacSnd;
    devpara.iftype = EN_LINK_ETHERNET;
    devpara.devfunc = CN_IPDEV_ALL;
    memcpy(devpara.mac,macaddress,6);
    devpara.name = (char *)pDrive->devname;
    devpara.mtu = CN_ETH_MTU;
    devpara.Private = (ptu32_t)pDrive;
    pDrive->devhandle = NetDev_Install(&devpara);
    if(0 == pDrive->devhandle)
    {
        goto NetInstallFailed;
    }
    if(false == __CreateRcvTask(pDrive->devhandle))
    {
        goto RcvTaskFailed;
    }

    if(false == loop)
    {
        Int_Register(CN_INT_LINE_ENET);
        Int_SetClearType(CN_INT_LINE_ENET,CN_INT_CLEAR_AUTO);
        Int_IsrConnect(CN_INT_LINE_ENET,ETH_IntHandler);
        Int_SettoAsynSignal(CN_INT_LINE_ENET);
        Int_ClearLine(CN_INT_LINE_ENET);
        Int_RestoreAsynLine(CN_INT_LINE_ENET);
    }

    debug_printf("%s:Install Net Device %s success\n\r",__FUNCTION__,devname);
    return true;

RcvTaskFailed:
    NetDev_Uninstall(devname);
NetInstallFailed:
    Lock_MutexDelete(pDrive->protect);
    pDrive->protect = NULL;
DEVPROTECT_FAILED:
    Lock_SempDelete(pDrive->rcvsync);
    pDrive->rcvsync = NULL;
RCVSYNC_FAILED:
debug_printf("%s:Install Net Device %s failed\n\r",__FUNCTION__,devname);
    return false;
}
